<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        tools:layout_conversion_absoluteHeight="20dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_conversion_absoluteWidth="37dp" />

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/editTitulo" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/purple_500"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/editDescripcion"/>

    <TextView
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/purple_500"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/editCorreo" />
    <TextView
        android:id="@+id/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/purple_500"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/editPrecio" />
    <TextView
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/purple_500"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/categorias"
        android:minHeight="48dp"/>

    <Switch
        android:id="@+id/envio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/envio"
        android:textColor="@color/purple_500"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minDesc"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/barrita"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="100" />

        <TextView
            android:id="@+id/maxDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxDesc"
            android:textSize="15sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/retiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:text="@string/retiro"/>

    <TextView
        android:id="@+id/direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/purple_500"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/editDireccion" />


    <CheckBox
        android:id="@+id/terminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:text="@string/terminos"/>
</LinearLayout>